--- a/eng/pipelines/templates/steps/java-publishing.yml
+++ b/eng/pipelines/templates/steps/java-publishing.yml
@@ -88,14 +88,15 @@ steps:
           -Path ${{ parameters.OutputDirectory }}
           -InformationAction Continue
     - ${{if and(eq(parameters.ShouldPublish, 'true'), ne(parameters.StageOnly, 'true'))}}:
-      - task: EsrpRelease@7
+      - task: EsrpRelease@9
         displayName: 'Publish to ESRP'
         inputs:
-          ConnectedServiceName: 'Azure SDK Engineering System'
-          ClientId: '5f81938c-2544-4f1f-9251-dd9de5b8a81b'
-          KeyVaultName: 'AzureSDKEngKeyVault'
-          AuthCertName: 'azure-sdk-esrp-release-auth-certificate'
-          SignCertName: 'azure-sdk-esrp-release-sign-certificate'
+          ConnectedServiceName: Azure SDK PME Managed Identity
+          Usemanagedidentity: true
+          DomainTenantId: 975f013f-7f24-47e8-a7d3-abc4752bf346
+          ClientId: 5f81938c-2544-4f1f-9251-dd9de5b8a81b
+          KeyVaultName: kv-azuresdk-codesign
+          SignCertName: azure-sdk-esrp-release-certificate
           Intent: 'PackageDistribution'
           ContentType: 'Maven'
           FolderLocation: ${{ parameters.OutputDirectory }}
