--- a/eng/automation/api-specs.yaml
+++ b/eng/automation/api-specs.yaml
@@ -76,6 +76,7 @@ machinelearningservices:
   service: machinelearning
 migrate/Microsoft.Migrate/AssessmentProjects:
   service: migration
+  suffix: assessment
 monitor:
   suffix: generated
 msi:
