--- a/eng/pipelines/patch-release.yml
+++ b/eng/pipelines/patch-release.yml
@@ -48,6 +48,10 @@ extends:
       groupId: com.azure
       safeName: azuremonitorquery
       ServiceDirectory: monitor
+    - name: azure-mixedreality-remoterendering
+      groupId: com.azure
+      safeName: azuremixedrealityremoterendering
+      ServiceDirectory: remoterendering
     - name: azure-ai-translation-text
       groupId: com.azure
       safeName: azureaitranslationtext
