--- a/sdk/contentsafety/azure-ai-contentsafety/pom.xml
+++ b/sdk/contentsafety/azure-ai-contentsafety/pom.xml
@@ -14,7 +14,7 @@
 
   <groupId>com.azure</groupId>
   <artifactId>azure-ai-contentsafety</artifactId>
-  <version>1.0.9</version> <!-- {x-version-update;com.azure:azure-ai-contentsafety;current} -->
+  <version>1.0.10</version> <!-- {x-version-update;com.azure:azure-ai-contentsafety;current} -->
   <packaging>jar</packaging>
 
   <name>Microsoft Azure SDK for ContentSafety</name>
@@ -45,7 +45,11 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <jacoco.min.linecoverage>0.4</jacoco.min.linecoverage>
     <jacoco.min.branchcoverage>0.3</jacoco.min.branchcoverage>
-
+    <!-- Configures the Java 9+ run to perform the required module exports, opens, and reads that are necessary for testing but shouldn't be part of the module-info. -->
+    <javaModulesSurefireArgLine>
+      --add-exports com.azure.core/com.azure.core.implementation.http=ALL-UNNAMED
+      --add-exports com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
+    </javaModulesSurefireArgLine>
     <checkstyle.suppressionsLocation>checkstyle-suppressions.xml</checkstyle.suppressionsLocation>
     <spotbugs.skip>false</spotbugs.skip>
     <spotbugs.excludeFilterFile>spotbugs-exclude.xml</spotbugs.excludeFilterFile>
